# ztu_somemodelruntime_ez_rknn_async

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  pyproject.toml  rknn_quickconvert.py
.github/workflows/: release-wheels.yml
python/ztu_somemodelruntime_ez_rknn_async/: __init__.py  __init__.pyi  options.py
src/: ez_rknn_async.hpp  ez_rknn_zero_copy.hpp  pybind_module.cpp  rknn_dtype.hpp  rknn_error_utils.hpp
tests/: test_copy_layout.py  test_shared_weight.py  test_zero_copy_iobinding_add.py  test_zero_copy_layout_mode.py
