[build-system]
requires = [
  "scikit-build-core>=0.5,<0.8; python_version < '3.8'",
  "scikit-build-core>=0.7; python_version >= '3.8'",
  "pybind11>=2.10",
]
build-backend = "scikit_build_core.build"

[project]
name = "ztu_somemodelruntime_ez_rknn_async"
version = "0.8.3"
description = "RKNN async inference Python bindings"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
dependencies = [
  "numpy>=1.21,<1.22; python_version < '3.8'",
  "numpy>=1.21; python_version >= '3.8'",
  "typing_extensions>=4.0; python_version < '3.8'",
]
authors = [
  { name="hallo1", email="happyme5315@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: C++",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
"Homepage" = "https://github.com/happyme531/ztu_somemodelruntime_ez_rknn_async"
"Repository" = "https://github.com/happyme531/ztu_somemodelruntime_ez_rknn_async"
"Issues" = "https://github.com/happyme531/ztu_somemodelruntime_ez_rknn_async/issues"

[tool.scikit-build]
wheel.packages = ["python/ztu_somemodelruntime_ez_rknn_async"]
sdist.include = ["src/**", "python/**", "CMakeLists.txt"]
sdist.exclude = ["dist/**", "wheelhouse/**", "*.whl", "*.tar.gz"]

[tool.scikit-build.cmake]
minimum-version = "3.18"
build-type = "Release"

[tool.scikit-build.install]
strip = false
